codex-rs/tui/src/snapshots/codex_tui__update_prompt__tests__standalone_windows_update_prompt_modal.snap
---
source: tui/src/update_prompt.rs
expression: terminal.backend()
---

  ✨ Update available! 0.0.0 -> 9.9.9

  Release notes: https://github.com/openai/codex/releases/latest

› 1. Update now (runs `powershell -ExecutionPolicy Bypass -c '$env:CODEX_NON_INTERACTIVE=1; irm               
     https://chatgpt.com/codex/install.ps1 | iex'`)                                                           
  2. Skip
  3. Skip until next version

  Press enter to continue
