codex-rs/tui/src/snapshots/codex_tui__update_prompt__tests__update_picker_selected_28x12.snap
---
source: tui/src/update_prompt.rs
expression: rendered
---

  Update available · 0.0.0
  → 9.9.9
  Release notes:
  https://github.com/opena
  i/codex/releases/latest
↑
› 3. Skip until next version

  enter continue · esc
  skip
