codex-rs/tui/src/snapshots/codex_tui__update_prompt__tests__update_prompt_modal.snap
---
source: tui/src/update_prompt.rs
expression: terminal.backend()
---

  Update available · 0.0.0 → 9.9.9
  Release notes: https://github.com/openai/codex/releases/latest

› 1. Update now (runs `npm install -g @openai/codex`)                           
  2. Skip
  3. Skip until next version

  enter continue · esc skip
