codex-rs/tui/src/snapshots/codex_tui__update_prompt__tests__update_remediation_prompt_modal.snap
---
source: tui/src/update_prompt.rs
assertion_line: 592
expression: terminal.backend()
---

  ✨ Update needs attention

  You are running Codex from:
    /prefix-a/lib/node_modules/@openai/codex
  but `npm install -g @openai/codex@latest` would update:
    /prefix-b/lib/node_modules/@openai/codex
  Fix your shell PATH or remove the stale Codex install, then restart Codex.

› 1. Help me fix this
  2. Later
  3. Don't remind me about this version
